    - Clearings option: gives a chance for large open areas to spawn. These will almost certainly create loops even without the imperfect maze option.
    - Oasis: Option to find mangrove-filled water at dead-ends, instead of ore or oil.
    - Settings to control mangrove density and proportion of raw/green wood
---------------------------------------------------------------------------------------------------
Version: 0.6.7
Date: 07. 12. 2018
  Major Features:
    - Mod ores can now be put at dead ends like vanilla ores. Supports practically any mod, with manual fine-tuning for popular mods such as
      Bob's Ores, Angel's Refining, Angel's Infinite Ores, Yuoki Industries, and more. Enable with the "Dead end mod resources" setting.
      (https://github.com/h8ul-modder/factorio-ribbon-maze/issues/1)
    - Maze block size can now be customized. Allowed sizes: 32 (default), 64, 96, 128, 192, 256. https://github.com/h8ul-modder/factorio-ribbon-maze/issues/22
  Features:
    - Settings to control how infinite ores from mods are handled. (https://github.com/h8ul-modder/factorio-ribbon-maze/issues/20)
    - Setting to stretch out resource richness increase. (https://github.com/h8ul-modder/factorio-ribbon-maze/issues/21)
    - Further improved spacing for oil and other resources with multi-tile collision boxes. (https://github.com/h8ul-modder/factorio-ribbon-maze/issues/27)
    - Setting to have mixed ores throughout the maze (https://github.com/h8ul-modder/factorio-ribbon-maze/issues/28)
  Balance:
    - Reduce frequency of Mangrove (Bruguiera) by half. (https://github.com/h8ul-modder/factorio-ribbon-maze/issues/17)
    - Less individual oil entities now that the minimum yield of 20% is respected.
  Bugfixes:
    - Mangrove (Bruguiera) was not being removed in terraforming. (https://github.com/h8ul-modder/factorio-ribbon-maze/issues/16)
    - Maze terraforming collision mask fix. (https://github.com/h8ul-modder/factorio-ribbon-maze/issues/23)