@@ -22,6 +22,8 @@ ribbon-maze-loop-chance=Loop chance
 ribbon-maze-water-resource=Water at dead ends
 ribbon-maze-clearing-chance=Clearing chance
 ribbon-maze-clearing-size-max=Max clearing size
+ribbon-maze-mangrove-density=Mangrove density
+ribbon-maze-green-raw-ratio=Mangrove green/raw wood ratio
 
 [mod-setting-description]
 ribbon-maze-blocks=Sets the maze width matching the block size (ignored if map gen settings are finite)
@@ -45,6 +47,8 @@ ribbon-maze-block-size=The size of the paths and "walls" of the maze in tiles.
 ribbon-maze-loop-chance=Gives a chance of loops in the maze (making the maze imperfect). Note that more loops mean fewer dead-ends, reducing the number of resource patches.
 ribbon-maze-water-resource=Makes water eligible to be placed at dead ends. This will compete with resources, but make it easier to access more water without terraforming
 ribbon-maze-clearing-chance=Chance of large clearings appearing in the maze
+ribbon-maze-mangrove-density=Spawn chance of mangroves
+ribbon-maze-green-raw-ratio=The ratio of green to raw wood produced by mangroves. Green wood can be "smelted" into raw wood, once you unlock wood kiln drying.
 
 [recipe-name]
 maze-terraforming-artillery-shell=Maze terraforming artillery shell
