@@ -159,6 +159,24 @@ data:extend{
     },
     {
         type = "double-setting",
+        name = "ribbon-maze-mangrove-density",
+        setting_type = "runtime-global",
+        minimum_value = 0.01,
+        maximum_value = 1,
+        default_value = 0.5,
+        order="rb-n-density",
+    },
+    {
+        type = "double-setting",
+        name = "ribbon-maze-green-raw-ratio",
+        setting_type = "runtime-global",
+        minimum_value = 0.5,
+        maximum_value = 1.0,
+        default_value = 0.95,
+        order="rb-n-density",
+    },
+    {
+        type = "double-setting",
         name = "ribbon-maze-loop-chance",
         setting_type = "runtime-global",
         minimum_value = 0,
