@@ -8,6 +8,8 @@ Date: 29. 01. 2019
     - Clearings option: gives a chance for large open areas to spawn. These will almost certainly create loops even without the imperfect maze option.
     - Oasis: Option to find mangrove-filled water at dead-ends, instead of ore or oil.
     - Settings to control mangrove density and proportion of raw/green wood
+  Balance:
+    - Default mangrove ratio of green to raw wood is higher
 ---------------------------------------------------------------------------------------------------
 Version: 0.6.7
 Date: 07. 12. 2018
